Fixed canvas overflow issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,7 @@ body {
 	background-color:black;
 }
 canvas {
+	display:block;
 	width: 100%;
 	height: 100%;
 }
